[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/components/UITestRadio/UITestRadio.gd" type="Script" id=1]
[ext_resource path="res://fonts/FreeSansBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/alarm_clock.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.18, 0.16, 0.2, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.501961, 0.627451, 0.74902, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=19]
size = 10
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.126933, 0.096, 0.16, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.495, 0.61825, 0.75, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=21]
size = 25
use_filter = true
font_data = ExtResource( 3 )

[node name="UITestRadio" type="Panel"]
margin_right = 256.0
margin_bottom = 72.0
rect_min_size = Vector2( 256, 72 )
custom_styles/panel = SubResource( 18 )
script = ExtResource( 1 )

[node name="LabelRadioFunc" type="Label" parent="."]
margin_left = 10.0
margin_top = 8.0
margin_right = 50.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.501961, 0.627451, 0.74902, 1 )
custom_fonts/font = SubResource( 19 )
text = "COM1"

[node name="PanelActive" type="Panel" parent="."]
margin_left = 16.0
margin_top = 35.0
margin_right = 123.0
margin_bottom = 63.0
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="LabelTitle" type="Label" parent="PanelActive"]
anchor_right = 1.0
margin_top = -13.0
custom_colors/font_color = Color( 0.501961, 0.627451, 0.74902, 1 )
custom_fonts/font = SubResource( 19 )
text = "Active"
align = 1

[node name="Label" type="Label" parent="PanelActive"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
custom_colors/font_color = Color( 0.811765, 0.737255, 0.584314, 1 )
custom_fonts/font = SubResource( 21 )
text = "888.888"
align = 1
valign = 1

[node name="PanelStandby" type="Panel" parent="."]
margin_left = 131.0
margin_top = 35.0
margin_right = 238.0
margin_bottom = 63.0
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="LabelTitle" type="Label" parent="PanelStandby"]
anchor_right = 1.0
margin_top = -13.0
custom_colors/font_color = Color( 0.501961, 0.627451, 0.74902, 1 )
custom_fonts/font = SubResource( 19 )
text = "Standby"
align = 1

[node name="Label" type="Label" parent="PanelStandby"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
custom_colors/font_color = Color( 0.811765, 0.737255, 0.584314, 1 )
custom_fonts/font = SubResource( 21 )
text = "888.888"
align = 1
valign = 1
